--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,4 @@
-@css-prefix: x-spreadsheet;
+@css-prefix: spreadsheet-js;
 // color
 @red-color: #DB2828;
 @red-hover-color: #d01919;
@@ -451,8 +451,8 @@ body {
   }
 }
 
-.x-spreadsheet-item,
-.x-spreadsheet-header,
+.@{css-prefix}-item,
+.@{css-prefix}-header
 {
 
   &.state {
